[project]
name = "autotrack"
version = "0.1.0"
description = "Audio command transcription tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click",
    "numpy",
    "sounddevice",
    "openai-whisper",
    "soundfile>=0.13.1",
    "torch>=2.0.0",
    "openai>=1.75.0",
    "python-rtmidi>=1.5.8",
    "python-dotenv>=1.1.0",
    "pyttsx3>=2.98",
]
